feat: add html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChatGpt</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    
+    <div class="chatbox-wrapper">
+        <div class="meaasge-box">
+            <div class="chat-response">
+                <span>Hello there! <br> How can i help you today?</span>
+            </div>
+            <div class="chat-message">
+                <img src="assest/pexels-photo-2379005.jpeg" alt="No image">
+                <span>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, odit magnam excepturi nobis neque omnis consequuntur natus sunt ab necessitatibus perferendis sed totam quo praesentium eum quas libero? Voluptatem, animi!
+
+                </span>
+            </div>
+        </div>
+        <div class="messagebar">
+            <div class="bar-wrapper">
+                <input type="text" name="" placeholder="Enter your message">
+                <button>
+                    <span class="material-symbols-outlined">
+                        send
+                        </span>
+                </button>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
