--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatGpt</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body>
-    <div class="chatbox-wrapper">
-        <div class="meaasge-box">
-            <div class="chat-response">
-                <span>Hello there! <br> How can i help you today?</span>
-            </div>
-            <div class="chat-message">
-                <img src="assest/pexels-photo-2379005.jpeg" alt="No image">
-                <span>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, odit magnam excepturi nobis neque omnis consequuntur natus sunt ab necessitatibus perferendis sed totam quo praesentium eum quas libero? Voluptatem, animi!
-
-                </span>
-            </div>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
+  <body>
+    <div class="chat-container">
+      <div class="chat outgoing">
+        <div class="chat-content">
+          <div class="chat-details">
+            <img src="./assest/user.jpeg" alt="" srcset="" />
+            <p>
+                
+              ask anything from chatgpt and get your mind blown away my geeee
+            </p>
+          </div>
         </div>
-        <div class="messagebar">
-            <div class="bar-wrapper">
-                <input type="text" name="" placeholder="Enter your message">
-                <button>
-                    <span class="material-symbols-outlined">
-                        send
-                        </span>
-                </button>
+      </div>
+
+      <div class="chat incoming">
+        <div class="chat-content">
+          <div class="chat-details">
+            <img src="./assest/chat-bot.jpg" alt="" srcset="" />
+            <p>
+              ask anything from chatgpt and get your mind blown away my geeee   
+            </p>
+          </div>
+          <span class="material-symbols-outlined"> content_copy </span>
+        </div>
+      </div>
+
+      <div class="chat incoming">
+        <div class="chat-content">
+          <div class="chat-details">
+            <img src="./assest/chat-bot.jpg" alt="" srcset="" />
+            <div class="typing-animation">
+                <div class="typing-dot" style="--delay:0.2s"></div>
+                <div class="typing-dot" style="--delay:0.3s"></div>
+                <div class="typing-dot" style="--delay:0.4s"></div>
+            </div>
+          </div>
+    </div>
+</div>
+    <div class="typing-container">
+        <div class="typing-content">
+            <div class="typing-textarea">
+                <textarea  id="chat-input" placeholder="Enter a prompt here" required></textarea>
+                <span id="send-btn" class="material-symbols-outlined"> send </span>
+            </div>
+            <div class="typing-controls">
+                <span id="theme-btn" class="material-symbols-outlined"> light_mode </span>
+                <span id="delete-btn" class="material-symbols-outlined"> delete </span>
 
             </div>
         </div>
     </div>
-</body>
+  </body>
 </html>
