--- a/index.html
+++ b/index.html
@@ -1,69 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatGpt</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+    <meta charset="utf-8">
+    <title>ChatGPT Clone in JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts Link For Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="index.js" defer></script>
   </head>
   <body>
-    <div class="chat-container">
-      <div class="chat outgoing">
-        <div class="chat-content">
-          <div class="chat-details">
-            <img src="./assest/user.jpeg" alt="" srcset="" />
-            <p>
-                
-              ask anything from chatgpt and get your mind blown away my geeee
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="chat incoming">
-        <div class="chat-content">
-          <div class="chat-details">
-            <img src="./assest/chat-bot.jpg" alt="" srcset="" />
-            <p>
-              ask anything from chatgpt and get your mind blown away my geeee   
-            </p>
-          </div>
-          <span class="material-symbols-outlined"> content_copy </span>
-        </div>
-      </div>
-
-      <div class="chat incoming">
-        <div class="chat-content">
-          <div class="chat-details">
-            <img src="./assest/chat-bot.jpg" alt="" srcset="" />
-            <div class="typing-animation">
-                <div class="typing-dot" style="--delay:0.2s"></div>
-                <div class="typing-dot" style="--delay:0.3s"></div>
-                <div class="typing-dot" style="--delay:0.4s"></div>
-            </div>
-          </div>
-    </div>
-</div>
+    <!-- Chats container -->
+    <div class="chat-container"></div>
+    
+    <!-- Typing container -->
     <div class="typing-container">
-        <div class="typing-content">
-            <div class="typing-textarea">
-                <textarea  id="chat-input" placeholder="Enter a prompt here" required></textarea>
-                <span id="send-btn" class="material-symbols-outlined"> send </span>
-            </div>
-            <div class="typing-controls">
-                <span id="theme-btn" class="material-symbols-outlined"> light_mode </span>
-                <span id="delete-btn" class="material-symbols-outlined"> delete </span>
-
-            </div>
+      <div class="typing-content">
+        <div class="typing-textarea">
+          <textarea id="chat-input" spellcheck="false" placeholder="Enter a prompt here" required></textarea>
+          <span id="send-btn" class="material-symbols-rounded">send</span>
         </div>
+        <div class="typing-controls">
+          <span id="theme-btn" class="material-symbols-rounded">light_mode</span>
+          <span id="delete-btn" class="material-symbols-rounded">delete</span>
+      </div>
     </div>
+
   </body>
 </html>
